[project]
name = "PyDAO_9000"
version = "1.2.4"
authors = [
  { name="Randall Nagy", email="r.a.nagy@gmail.com" },
]
description = "'All-In-One File' SQL Code Generator"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soft9000/PyDAO"
"Bug Tracker" = "https://github.com/soft9000/PyDAO/issues"